# votankurokawa1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  main.py
app/ai/: client_interface.py  factory.py  gemini_client.py  groq_client.py  mock_client.py  orchestrator.py  output_schemas.py  prompt_design.py  real_client.py  response_formatter.py  tool_executor.py  tools.py
app/auth/: line_auth.py
app/calculation/: engine.py  four_pillars.py  luck_cycles.py  policy.py  sanmeigaku.py  schemas.py  solar_terms.py  tables.py
assets/: rich_menu.json
docs/: INPUT_REQUIRED.md  ai-prompt-design.md  anthropic-setup.md  architecture.md  assumptions.md  backup-and-restore.md  calculation-policy.md  cost-estimate.md  current-sheet-schema.md  data-dictionary.md  golden-test-guide.md  google-cloud-deployment.md  google-sheets-setup.md  line-setup.md  operations.md  phase2-design.md  phase3-design.md  privacy-and-retention.md  requirements.md  security.md  test-plan.md  troubleshooting.md
golden_tests/: cli.py  schema.py
scripts/: export_rich_menu_json.py  generate_rich_menu_image.py  inspect_sheet_schema.py  mock_line_client.py  register_rich_menu.py  seed_mock_data.py
tests/: conftest.py  test_ai_data_minimization.py  test_auth.py  test_calculation_golden.py  test_line_parsers.py  test_messaging.py  test_registration.py  test_update_undo.py  test_webhook.py
(+25 files in other folders)
