[project]
name = "kuroeda-techo"
version = "0.1.0"
description = "石橋輝一専用 人事分析LINE Bot「黒革の手帳」"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
